--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,51 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx">
+
+          async function login() {
+
+
+          const response = await fetch('/auth/jwt/create/', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({
+                  email: 'test@avocado.com',
+                  password: '1234'
+              })
+          });
+          const data = await response.json();
+          localStorage.setItem('access', data.access);
+          localStorage.setItem('refresh', data.refresh);
+          alert("Logged in!");
+        }
+
+
+        async function getProtected() {
+          const token = localStorage.getItem('access');
+          const response = await fetch('/your-protected-api/', {
+              headers: {
+                  'Authorization': `Bearer ${token}`
+              }
+          });
+
+          const data = await response.json();
+          console.log(data);
+      }
+
+
+      async function refreshToken() {
+          const response = await fetch('/auth/jwt/refresh/', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({
+                  refresh: localStorage.getItem('refresh')
+              })
+          });
+
+          const data = await response.json();
+          localStorage.setItem('access', data.access);
+      }
+    </script>
   </body>
 </html>
